--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "react-bootstrap": "^2.10.4",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.25.1",
+    "socket-td": "file:..",
     "socket.io-client": "^4.7.5",
     "zustand": "^4.5.4"
   },
